--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-ant-design-pro-layout-less",
+  "name": "sweetie-care",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,24 +7,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "4.1.0",
-    "@ant-design/pro-layout": "5.0.10",
+    "@ant-design/icons": "4.5.0",
+    "@ant-design/pro-layout": "6.14.2",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^4.2.0",
+    "antd": "^4.12.3",
     "babel-plugin-import": "^1.13.0",
     "esm": "3.2.25",
     "less": "3.11.1",
     "less-vars-to-js": "1.3.0",
     "next": "latest",
     "null-loader": "4.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "webpack": "^4.44.1",
     "webpack-filter-warnings-plugin": "1.2.1"
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "13.13.4",
-    "@types/react": "^16.9.36",
+    "@types/node": "14.14.31",
+    "@types/react": "^17.0.2",
     "typescript": "4.0"
   }
 }
